--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     packagingOptions {
@@ -51,7 +53,12 @@ dependencies {
     implementation 'com.shuyu:gsyVideoPlayer-java:6.0.3'
     //noinspection GradleDependency
     implementation 'com.shuyu:gsyVideoPlayer-armv7a:6.0.3'
+    implementation 'androidx.core:core-ktx:1.3.0-alpha01'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
