--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,15 @@
         android:name="android.permission.READ_LOGS"
         tools:ignore="ProtectedPermissions" />
     <!--
- 如果你的应用打算在各个设备(手机、可穿戴、tv)，将leanback的required的值设置为false；
-    设置为ture的话你的应用只可以在使用Leanback的设备上。
+     If your application is going to be on various devices (mobile, wearable, tv), set the required value of leanback to false;
+     If set to true, your app can only be used on devices using Leanback.
     -->
     <uses-feature
         android:name="android.software.leanback"
         android:required="false" />
     <!--
- 声明Touchscreen属性，这个看个人需要，主要是声明你的app需不需要支持触摸屏输入。
-        值得注意的是，如果你的应用打算在googleplay上架，必须在你的manifest添加此段代码，否则不予上架。
+    Declare the Touchscreen property. This depends on personal needs. It mainly states whether your app needs to support touch screen input.
+    It is worth noting that if your application is going to be listed on googleplay, you must add this code to your manifest, otherwise it will not be listed.
     -->
     <uses-feature
         android:name="android.hardware.touchscreen"
